--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -29,13 +29,14 @@
 
           </mt-input-container>
         </div>
-        <div class="col-sm-2 col-xs-6">
-          <mt-input-container errorMessage='Número obrigatório' label='Número'>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage='Obrigatório e somente números' label='Número'>
             <input ttype="text" class="form-control" name="number" required ngModel placeholder="Número"
+            pattern="^[0-9]*$"
             autocomplete="off">
           </mt-input-container>
         </div>
-        <div class="col-sm-4 col-xs-6">
+        <div class="col-sm-3 col-xs-6">
           <mt-input-container>
             <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
           </mt-input-container>
