--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,14 +1,12 @@
 <!--INICIO DO CONTEUDO-->
-<section class="content-header">
-</section>
+<section class="content-header"></section>
 
 <section class="content">
   <section class="invoice">
+    {{ form.value | json }}
+    {{ form.valid | json }}
 
-    {{form.value | json}}
-    {{form.valid | json}}
-
-    <form #form='ngForm' novalidate>
+    <form #form="ngForm" novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -22,26 +20,48 @@
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
-          <mt-input-container errorMessage='Campo Obrigatório e com 5 caracteres' label='Endereço'>
-
-            <input class="form-control" name="adress" ngModel required minlength="5" autocomplete="off"
-              placeholder="Endereço">
-
+          <mt-input-container
+            errorMessage="Campo Obrigatório e com 5 caracteres"
+            label="Endereço"
+          >
+            <input
+              class="form-control"
+              name="adress"
+              ngModel
+              required
+              minlength="5"
+              autocomplete="off"
+              placeholder="Endereço"
+            />
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
-          <mt-input-container errorMessage='Obrigatório e somente números' label='Número'>
-            <input ttype="text" class="form-control" name="number" required ngModel placeholder="Número"
-            pattern="^[0-9]*$"
-            autocomplete="off">
+          <mt-input-container
+            errorMessage="Obrigatório e somente números"
+            label="Número"
+          >
+            <input
+              ttype="text"
+              class="form-control"
+              name="number"
+              required
+              ngModel
+              placeholder="Número"
+              pattern="^[0-9]*$"
+              autocomplete="off"
+            />
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
-            <input type="text" class="form-control" name="optional" ngModel placeholder="Complemento">
+            <input
+              type="text"
+              class="form-control"
+              name="optional"
+              ngModel
+              placeholder="Complemento"
+            />
           </mt-input-container>
-
-
         </div>
         <!-- /.col -->
       </div>
@@ -52,8 +72,13 @@
         <div class="col-xs-12">
           <p class="lead">Itens do Pedido:</p>
         </div>
-        
-       <mt-order-itens></mt-order-itens>
+
+        <mt-order-itens
+          [items]="cartItems()"
+          (increaseQty)="increaseQty($event)"
+          (decreaseQty)="decreaseQty($event)"
+          (remove)="remove($event)"
+        ></mt-order-itens>
       </div>
       <!-- /.row -->
 
@@ -63,10 +88,12 @@
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-              <mt-radio [options]='paymentOptions' name='paymentOption' ngModel></mt-radio>
-
+            <mt-radio
+              [options]="paymentOptions"
+              name="paymentOption"
+              ngModel
+            ></mt-radio>
           </div>
-
         </div>
         <!-- /.col -->
         <div class="col-sm-6 col-xs-12">
@@ -76,7 +103,7 @@
             <table class="table">
               <tbody>
                 <tr>
-                  <th style="width:50%">Itens:</th>
+                  <th style="width: 50%">Itens:</th>
                   <td class="text-right">R$ 20,00</td>
                 </tr>
                 <tr>
@@ -93,17 +120,15 @@
         </div>
         <!-- /.col -->
       </div>
-
     </form>
 
     <div class="row">
       <div class="col-xs-12">
-        <button class="btn btn-success pull-right" [disabled]='!form.valid'><i class="fa fa-credit-card"></i> Concluir
-          Pedido
+        <button class="btn btn-success pull-right" [disabled]="!form.valid">
+          <i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
       </div>
     </div>
-
   </section>
 </section>
 <!-- FIM DO CONTEUDO-->
