--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -57,7 +57,7 @@
             <input
               type="text"
               class="form-control"
-              name="optional"
+              name="optionalAddress"
               ngModel
               placeholder="Complemento"
             />
@@ -111,7 +111,7 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button class="btn btn-success pull-right" [disabled]="!form.valid || cartItems().length === 0">
+        <button (click)='checkOrder(form.value)' class="btn btn-success pull-right" [disabled]="!form.valid || cartItems().length === 0">
           <i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
       </div>
