--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,9 +1,8 @@
-<!--INICIO DO CONTEUDO-->
 <section class="content-header"></section>
 
 <section class="content">
   <section class="invoice">
-    <form #form="ngForm" novalidate>
+    <form [formGroup]='orderForm' novalidate>
       <div class="row">
         <div class="col-xs-12">
           <h2 class="page-header">
@@ -11,53 +10,49 @@
           </h2>
         </div>
       </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <p class="lead"> Seus Dados:</p>
 
-      <div class="row invoice-info">
+        </div>
+        <div class="col-sm-6 col-xs-12">
+          <mt-input-container errorMessage="Campo Obrigatório e com 5 caracteres" label="Nome">
+            <input class="form-control" formControlName="name" autocomplete="off" placeholder="Nome" />
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Email inválido" label="Email">
+            <input type="text" class="form-control" formControlName="email" placeholder="Email" autocomplete="off" />
+          </mt-input-container>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <mt-input-container errorMessage="Email inválido" label="Email">
+            <input type="text" class="form-control" formControlName="emailConfirmation"
+              placeholder="Confirmação do Email" autocomplete="off" />
+          </mt-input-container>
+        </div>
+
+      </div>
+
+
+      <div class="row">
         <div class="col-xs-12">
           <p class="lead">Endereço de Entrega:</p>
         </div>
         <div class="col-sm-6 col-xs-12">
-          <mt-input-container
-            errorMessage="Campo Obrigatório e com 5 caracteres"
-            label="Endereço"
-          >
-            <input
-              class="form-control"
-              name="adress"
-              ngModel
-              required
-              minlength="5"
-              autocomplete="off"
-              placeholder="Endereço"
-            />
+          <mt-input-container errorMessage="Campo Obrigatório e com 5 caracteres" label="Endereço">
+            <input class="form-control" formControlName="address" autocomplete="off" placeholder="Endereço" />
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
-          <mt-input-container
-            errorMessage="Obrigatório e somente números"
-            label="Número"
-          >
-            <input
-              ttype="text"
-              class="form-control"
-              name="number"
-              required
-              ngModel
-              placeholder="Número"
-              pattern="^[0-9]*$"
-              autocomplete="off"
-            />
+          <mt-input-container errorMessage="Obrigatório e somente números" label="Número">
+            <input type="text" class="form-control" formControlName="number" placeholder="Número" pattern="^[0-9]*$"
+              autocomplete="off" />
           </mt-input-container>
         </div>
         <div class="col-sm-3 col-xs-6">
           <mt-input-container>
-            <input
-              type="text"
-              class="form-control"
-              name="optionalAddress"
-              ngModel
-              placeholder="Complemento"
-            />
+            <input type="text" class="form-control" formControlName="optionalAddress" placeholder="Complemento" />
           </mt-input-container>
         </div>
         <!-- /.col -->
@@ -70,36 +65,23 @@
           <p class="lead">Itens do Pedido:</p>
         </div>
 
-        <mt-order-itens
-          [items]="cartItems()"
-          (increaseQty)="increaseQty($event)"
-          (decreaseQty)="decreaseQty($event)"
-          (remove)="remove($event)"
-        ></mt-order-itens>
+        <mt-order-itens [items]="cartItems()" (increaseQty)="increaseQty($event)" (decreaseQty)="decreaseQty($event)"
+          (remove)="remove($event)"></mt-order-itens>
       </div>
-      <!-- /.row -->
+
 
       <div class="row">
-        <!-- accepted payments column -->
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Formas de Pagamento:</p>
 
           <div class="form-group">
-            <mt-radio
-              [options]="paymentOptions"
-              name="paymentOption"
-              ngModel
-              required
-            ></mt-radio>
+            <mt-radio [options]="paymentOptions" formControlName="paymentOption"></mt-radio>
           </div>
         </div>
         <!-- /.col -->
         <div class="col-sm-6 col-xs-12">
           <p class="lead">Frete e Total:</p>
-          <mt-delivery-costs 
-          [delivery]='delivery'
-          [itemsValue]='itemsValue()'
-          ></mt-delivery-costs>
+          <mt-delivery-costs [delivery]='delivery' [itemsValue]='itemsValue()'></mt-delivery-costs>
 
         </div>
         <!-- /.col -->
@@ -108,11 +90,11 @@
 
     <div class="row">
       <div class="col-xs-12">
-        <button (click)='checkOrder(form.value)' class="btn btn-success pull-right" [disabled]="!form.valid || cartItems().length === 0">
+        <button (click)='checkOrder(orderForm.value)' class="btn btn-success pull-right"
+          [disabled]="!orderForm.valid || cartItems().length === 0">
           <i class="fa fa-credit-card"></i> Concluir Pedido
         </button>
       </div>
     </div>
   </section>
 </section>
-<!-- FIM DO CONTEUDO-->
