--- a/src/app/restaurantes/restaurant-detail/menu-item/menu-item.component.html
+++ b/src/app/restaurantes/restaurant-detail/menu-item/menu-item.component.html
@@ -1,4 +1,4 @@
-<div class="menu-item-info-box">
+<div class="menu-item-info-box" [@menuItemAppeared]='menuItemState'>
   <span class="menu-item-info-box-icon"><img [src]="menuItem.imagePath"></span>
 
   <div class="menu-item-info-box-content">
@@ -7,5 +7,4 @@
     <span class="menu-item-info-box-price">{{ menuItem.price | currency: "BRL": true}}</span>
     <a (click)='emitAddEvent()'><i class="fa fa-plus-circle"></i> Adicionar</a>
   </div>
-  <!-- /.info-box-content -->
 </div>
