--- a/src/app/restaurantes/restaurant-detail/shopping-cart/shopping-cart.component.html
+++ b/src/app/restaurantes/restaurant-detail/shopping-cart/shopping-cart.component.html
@@ -1,4 +1,3 @@
-
 <div class="box box-solid">
   <div class="box-header">
     <i class="fa fa-shopping-cart"></i>
@@ -15,16 +14,16 @@
     <div class="table-responsive" *ngIf='items().length'>
       <table class="table">
         <tbody>
-    
-          <tr *ngFor='let item of items()'>
+
+          <tr *ngFor='let item of items()' [@row]='rowState'>
             <th>({{ item.quantity }}x) {{ item.menuItem.name }}</th>
 
             <td class="text-right">{{item.value() | currency: 'BRL': true }}</td>
             <td class="text-right">
-              <a (click)='removeItem(item)'class="btn btn-sm danger"> <i class="fa fa-remove"></i></a>
-             </td>
+              <a (click)='removeItem(item)' class="btn btn-sm danger"> <i class="fa fa-remove"></i></a>
+            </td>
           </tr>
-    
+
           <tr>
             <th>Total:</th>
 
