--- a/src/app/order-sumary/order-sumary.component.html
+++ b/src/app/order-sumary/order-sumary.component.html
@@ -1,4 +1,3 @@
-<!-- INICIO DO CONTEUDO -->
 <section class="content-header">
 </section>
 
@@ -7,11 +6,12 @@
     <h2>Pedido Concluído</h2>
     <p>Seu pedido foi recebido pelo restaurante. Prepare a mesa que a comida está chegando!</p>
     <p><b>Avalie</b> sua experiência:</p>
-    <p><mt-rating  (rated)='rated = true'></mt-rating></p>
-    <p [hidden]='!rated'>
+    <p>
+      <mt-rating (rated)='rate()'></mt-rating>
+    </p>
+    <p *ngIf='!rated'>
       Obrigado pela sua Avaliação
     </p>
   </div>
 
 </section>
-<!-- FIM DO CONTEUDO -->
