--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -1,12 +1,12 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
-    <a class="search-link pull-right"> <i class="fa fa-search"></i></a>
+    <a class="search-link pull-right" (click)='toggleSearch()'> <i class="fa fa-search"></i></a>
   </h1>
 
   <!-- barra de busca -->
     <div class="row">
-      <div class="col-xs-12"> <!-- 12 colunas -->
+      <div class="col-xs-12 search-bar" [@toggleSearch]='searchBarState'> <!-- 12 colunas -->
         <form>
           <div class="form-group">
             <input type="text" class="form-control" placeholder="O que você está procurando?">
