--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -7,9 +7,9 @@
   <!-- barra de busca -->
     <div class="row">
       <div class="col-xs-12 search-bar" [@toggleSearch]='searchBarState'> <!-- 12 colunas -->
-        <form>
+        <form [formGroup]='searchForm'>
           <div class="form-group">
-            <input type="text" class="form-control" placeholder="O que você está procurando?">
+            <input type="text" class="form-control" formControlName='search' placeholder="O que você está procurando?">
           </div>
         </form>
 
