--- a/src/app/restaurantes/restaurantes.component.html
+++ b/src/app/restaurantes/restaurantes.component.html
@@ -1,20 +1,29 @@
 <section class="content-header">
   <h1>
     Todos os Restaurantes
-    <a class="search-link pull-right" (click)='toggleSearch()'> <i class="fa fa-search"></i></a>
+    <a class="search-link pull-right" (click)='toggleSearch()'>
+      <span *ngIf='iptSearch.value'>
+        <small>
+          {{iptSearch.value}}
+        </small>
+      </span>
+      <i class="fa fa-search">
+      </i></a>
   </h1>
 
   <!-- barra de busca -->
-    <div class="row">
-      <div class="col-xs-12 search-bar" [@toggleSearch]='searchBarState'> <!-- 12 colunas -->
-        <form [formGroup]='searchForm'>
-          <div class="form-group">
-            <input type="text" class="form-control" formControlName='search' placeholder="O que você está procurando?">
-          </div>
-        </form>
+  <div class="row">
+    <div class="col-xs-12 search-bar" [@toggleSearch]='searchBarState'>
+      <!-- 12 colunas -->
+      <form [formGroup]='searchForm'>
+        <div class="form-group">
+          <input type="text" class="form-control" #iptSearch formControlName='search'
+            placeholder="O que você está procurando?">
+        </div>
+      </form>
 
-      </div>
     </div>
+  </div>
 </section>
 <section class="content">
   <div class="row">
